Use address instead of place

--- a/bbt.bib
+++ b/bbt.bib
@@ -388,9 +388,9 @@
   month     = nov,
   editor    = {Gay, Simon and Mackie, Ian},
   publisher = {Cambridge University Press},
+  address   = {Cambridge},
   doi       = {10.1017/CBO9781139193313},
-  timestamp = {2021-04-18},
-  place     = {Cambridge}
+  timestamp = {2021-04-18}
 }
 
 @inproceedings{Grattage2011,
@@ -1027,6 +1027,7 @@ quantum algorithms, the Harrow-Hassidim-Lloyd algorithm and Shor's algorithm.}
   booktitle = {Semantic {{Techniques}} in {{Quantum Computation}}},
   editor    = {Gay, Simon and Mackie, Ian},
   publisher = {{Cambridge University Press}},
+  address   = {{Cambridge}},
   pages     = {135--172},
   crossref  = {Gay2009},
   doi       = {10.1017/CBO9781139193313.005},
