--- a/bbt.bib
+++ b/bbt.bib
@@ -646,7 +646,18 @@ quantum algorithms, the Harrow-Hassidim-Lloyd algorithm and Shor's algorithm.}
   pages     = {187--207},
   doi       = {10.1007/978-3-030-25543-5_12},
   abstract  = {We formalize the theory of quantum Hoare logic (QHL) [TOPLAS 33(6),19], an extension of Hoare logic for reasoning about quantum programs. In particular, we formalize the syntax and semantics of quantum programs in Isabelle/HOL, write down the rules of quantum Hoare logic, and verify the soundness and completeness of the deduction system for partial correctness of quantum programs. As preliminary work, we formalize some necessary mathematical background in linear algebra, and define tensor products of vectors and matrices on quantum variables. As an application, we verify the correctness of Grover's search algorithm. To our best knowledge, this is the first time a Hoare logic for quantum programs is formalized in an interactive theorem prover, and used to verify the correctness of a nontrivial quantum algorithm.},
+  note      = {See also: Isabelle AFP entry, QHLProver \cite{Liu2019a}},
   timestamp = {2021-04-18}
+}
+
+@misc{Liu2019a,
+  title   = {Quantum Hoare Logic},
+  author  = {Liu, Junyi and Zhan, Bohua and Wang, Shuling and Ying, Shenggang and Liu, Tao and Li, Yangjia and Ying, Mingsheng and Zhan, Naijun},
+  year    = 2019,
+  month   = mar,
+  journal = {Archive of Formal Proofs},
+  url     = {https://isa-afp.org/entries/QHLProver.html},
+  note    = {QHLProver-AFP, formal proof development in Isabelle, supplement to \cite{Liu2019}}
 }
 
 @article{Mahmoud2019,
