--- a/bbt.bib
+++ b/bbt.bib
@@ -16,7 +16,7 @@
 
 @misc{Aleksandrowicz2017,
   title        = {Qiskit: {{An}} Open-Source Framework for Quantum Computing},
-  author       = {Aleksandrowicz, Gadi and Alexander, Thomas and Barkoutsos, Panagiotis and Bello, Luciano and {Ben-Haim}, Yael and Bucher, David and {Cabrera-Hern{\'a}ndez}, Francisco Jose and {Carballo-Franquis}, Jorge and Chen, Adrian and Chen, Chun-Fu and Chow, Jerry M. and {C{\'o}rcoles-Gonzales}, Antonio D. and Cross, Abigail J. and Cross, Andrew and {Cruz-Benito}, Juan and Culver, Chris and Gonz{\'a}lez, Salvador De La Puente and Torre, Enrique De La and Ding, Delton and Dumitrescu, Eugene and Duran, Ivan and Eendebak, Pieter and Everitt, Mark and Sertage, Ismael Faro and Frisch, Albert and Fuhrer, Andreas and Gambetta, Jay and Gago, Borja Godoy and {Gomez-Mosquera}, Juan and Greenberg, Donny and Hamamura, Ikko and Havlicek, Vojtech and Hellmers, Joe and Herok, {\L}ukasz and Horii, Hiroshi and Hu, Shaohan and Imamichi, Takashi and Itoko, Toshinari and {Javadi-Abhari}, Ali and Kanazawa, Naoki and Karazeev, Anton and Krsulich, Kevin and Liu, Peng and Luh, Yang and Maeng, Yunho and Marques, Manoel and {Mart{\'i}n-Fern{\'a}ndez}, Francisco Jose and McClure, Douglas T. and McKay, David and Meesala, Srujan and Mezzacapo, Antonio and Moll, Nikolaj and Rodr{\'i}guez, Diego Moreda and Nannicini, Giacomo and Nation, Paul and Ollitrault, Pauline and O'Riordan, Lee James and Paik, Hanhee and P{\'e}rez, Jes{\'u}s and Phan, Anna and Pistoia, Marco and Prutyanov, Viktor and Reuter, Max and Rice, Julia and Davila, Abd{\'o}n Rodr{\'i}guez and Rudy, Raymond Harry Putra and Ryu, Mingi and Sathaye, Ninad and Schnabel, Chris and Schoute, Eddie and Setia, Kanav and Shi, Yunong and Silva, Adenilton and Siraichi, Yukio and Sivarajah, Seyon and Smolin, John A. and Soeken, Mathias and Takahashi, Hitomi and Tavernelli, Ivano and Taylor, Charles and Taylour, Pete and Trabing, Kenso and Treinish, Matthew and Turner, Wes and {Vogt-Lee}, Desiree and Vuillot, Christophe and Wildstrom, Jonathan A. and Wilson, Jessica and Winston, Erick and Wood, Christopher and Wood, Stephen and W{\"o}rner, Stefan and Akhalwaya, Ismail Yunus and Zoufal, Christa},
+  author       = {Aleksandrowicz, Gadi and Alexander, Thomas and Barkoutsos, Panagiotis and Bello, Luciano and {Ben-Haim}, Yael and Bucher, David and {Cabrera-Hern{\'a}ndez}, Francisco Jose and {Carballo-Franquis}, Jorge and Chen, Adrian and Chen, Chun-Fu and Chow, Jerry M. and {C{\'o}rcoles-Gonzales}, Antonio D. and Cross, Abigail J. and Cross, Andrew W. and {Cruz-Benito}, Juan and Culver, Chris and Gonz{\'a}lez, Salvador De La Puente and Torre, Enrique De La and Ding, Delton and Dumitrescu, Eugene and Duran, Ivan and Eendebak, Pieter and Everitt, Mark and Sertage, Ismael Faro and Frisch, Albert and Fuhrer, Andreas and Gambetta, Jay and Gago, Borja Godoy and {Gomez-Mosquera}, Juan and Greenberg, Donny and Hamamura, Ikko and Havlicek, Vojtech and Hellmers, Joe and Herok, {\L}ukasz and Horii, Hiroshi and Hu, Shaohan and Imamichi, Takashi and Itoko, Toshinari and {Javadi-Abhari}, Ali and Kanazawa, Naoki and Karazeev, Anton and Krsulich, Kevin and Liu, Peng and Luh, Yang and Maeng, Yunho and Marques, Manoel and {Mart{\'i}n-Fern{\'a}ndez}, Francisco Jose and McClure, Douglas T. and McKay, David and Meesala, Srujan and Mezzacapo, Antonio and Moll, Nikolaj and Rodr{\'i}guez, Diego Moreda and Nannicini, Giacomo and Nation, Paul and Ollitrault, Pauline and O'Riordan, Lee James and Paik, Hanhee and P{\'e}rez, Jes{\'u}s and Phan, Anna and Pistoia, Marco and Prutyanov, Viktor and Reuter, Max and Rice, Julia and Davila, Abd{\'o}n Rodr{\'i}guez and Rudy, Raymond Harry Putra and Ryu, Mingi and Sathaye, Ninad and Schnabel, Chris and Schoute, Eddie and Setia, Kanav and Shi, Yunong and Silva, Adenilton and Siraichi, Yukio and Sivarajah, Seyon and Smolin, John A. and Soeken, Mathias and Takahashi, Hitomi and Tavernelli, Ivano and Taylor, Charles and Taylour, Pete and Trabing, Kenso and Treinish, Matthew and Turner, Wes and {Vogt-Lee}, Desiree and Vuillot, Christophe and Wildstrom, Jonathan A. and Wilson, Jessica and Winston, Erick and Wood, Christopher and Wood, Stephen and W{\"o}rner, Stefan and Akhalwaya, Ismail Yunus and Zoufal, Christa},
   year         = {2017},
   month        = mar,
   doi          = {10.5281/zenodo.2562110},
@@ -50,7 +50,7 @@
   year      = {2009},
   month     = nov,
   booktitle = {Semantic {{Techniques}} in {{Quantum Computation}}},
-  editor    = {Gay, Simon and Mackie, Ian},
+  editor    = {Gay, Simon J. and Mackie, Ian},
   publisher = {{Cambridge University Press}},
   address   = {{Cambridge}},
   pages     = {173--205},
@@ -288,7 +288,7 @@
   year      = {2009},
   month     = nov,
   booktitle = {Semantic {{Techniques}} in {{Quantum Computation}}},
-  editor    = {Gay, Simon and Mackie, Ian},
+  editor    = {Gay, Simon J. and Mackie, Ian},
   publisher = {{Cambridge University Press}},
   address   = {{Cambridge}},
   pages     = {235--310},
@@ -386,7 +386,7 @@
   title     = {Semantic Techniques in Quantum Computation},
   year      = {2009},
   month     = nov,
-  editor    = {Gay, Simon and Mackie, Ian},
+  editor    = {Gay, Simon J. and Mackie, Ian},
   publisher = {Cambridge University Press},
   address   = {Cambridge},
   doi       = {10.1017/CBO9781139193313},
@@ -470,7 +470,7 @@
 
 @article{Heim2020a,
   title     = {Quantum Programming Languages},
-  author    = {Heim, Bettina and Soeken, Mathias and Marshall, Sarah and Granade, Chris and Roetteler, Martin and Geller, Alan and Troyer, Matthias and Svore, Krysta},
+  author    = {Heim, Bettina and Soeken, Mathias and Marshall, Sarah and Granade, Chris and Roetteler, Martin and Geller, Alan and Troyer, Matthias and Svore, Krysta M.},
   year      = {2020},
   month     = dec,
   journal   = {Nature Reviews Physics},
@@ -1064,7 +1064,7 @@ quantum algorithms, the Harrow-Hassidim-Lloyd algorithm and Shor's algorithm.}
   year      = {2009},
   month     = nov,
   booktitle = {Semantic {{Techniques}} in {{Quantum Computation}}},
-  editor    = {Gay, Simon and Mackie, Ian},
+  editor    = {Gay, Simon J. and Mackie, Ian},
   publisher = {{Cambridge University Press}},
   address   = {{Cambridge}},
   pages     = {135--172},
@@ -1115,7 +1115,7 @@ quantum algorithms, the Harrow-Hassidim-Lloyd algorithm and Shor's algorithm.}
 @inproceedings{Svore2018,
   title         = {Q\#: {{Enabling Scalable Quantum Computing}} and {{Development}} with a {{High}}-Level {{DSL}}},
   shorttitle    = {Q\#},
-  author        = {Svore, Krysta and Geller, Alan and Troyer, Matthias and Azariah, John and Granade, Christopher and Heim, Bettina and Kliuchnikov, Vadym and Mykhailova, Mariia and Paz, Andres and Roetteler, Martin},
+  author        = {Svore, Krysta M. and Geller, Alan and Troyer, Matthias and Azariah, John and Granade, Christopher and Heim, Bettina and Kliuchnikov, Vadym and Mykhailova, Mariia and Paz, Andres and Roetteler, Martin},
   year          = {2018},
   month         = feb,
   booktitle     = {Proceedings of the {{Real World Domain Specific Languages Workshop}} 2018},
@@ -1193,7 +1193,7 @@ quantum algorithms, the Harrow-Hassidim-Lloyd algorithm and Shor's algorithm.}
   year      = {2009},
   month     = nov,
   booktitle = {Semantic {{Techniques}} in {{Quantum Computation}}},
-  editor    = {Gay, Simon and Mackie, Ian},
+  editor    = {Gay, Simon J. and Mackie, Ian},
   publisher = {{Cambridge University Press}},
   address   = {{Cambridge}},
   pages     = {311--360},
