Fix publisher name in Ying2016 book

--- a/bbt.bib
+++ b/bbt.bib
@@ -1277,7 +1277,7 @@ quantum algorithms, the Harrow-Hassidim-Lloyd algorithm and Shor's algorithm.}
   author    = {Ying, Mingsheng},
   year      = {2016},
   month     = mar,
-  publisher = {{Morgan Kaufmann is an imprint of Elsevier}},
+  publisher = {{Morgan Kaufmann}},
   address   = {{Amsterdam}},
   doi       = {10.1016/C2014-0-02660-3},
   timestamp = {2021-04-18}
