--- a/bbt.bib
+++ b/bbt.bib
@@ -198,16 +198,15 @@
 }
 
 @misc{CirqDevelopers2018,
-  title        = {Cirq},
-  author       = {{Cirq Developers}},
-  year         = {2018},
-  month        = jul,
-  doi          = {10.5281/zenodo.4062499},
-  howpublished = {Zenodo},
-  url          = {https://github.com/quantumlib/Cirq},
-  abstract     = {Cirq is a Python library for writing, manipulating, and optimizing quantum circuits and running them against quantum computers and simulators.},
-  note         = {See full list of authors on Github: \url{https://github.com/quantumlib/Cirq/graphs/contributors}},
-  timestamp    = {2021-04-18}
+  title     = {Cirq},
+  author    = {{Cirq Developers}},
+  year      = {2018},
+  month     = jul,
+  doi       = {10.5281/zenodo.4062499},
+  url       = {https://github.com/quantumlib/Cirq},
+  abstract  = {Cirq is a Python library for writing, manipulating, and optimizing quantum circuits and running them against quantum computers and simulators.},
+  note      = {See full list of authors on Github: \url{https://github.com/quantumlib/Cirq/graphs/contributors}},
+  timestamp = {2021-04-18}
 }
 
 @inproceedings{Coecke2008,
@@ -832,16 +831,15 @@ quantum algorithms, the Harrow-Hassidim-Lloyd algorithm and Shor's algorithm.}
 }
 
 @misc{QiskitCommunity2017,
-  title        = {Qiskit: {{An}} Open-Source Framework for Quantum Computing},
-  author       = {{Qiskit Community}},
-  year         = {2017},
-  month        = mar,
-  doi          = {10.5281/zenodo.2562110},
-  howpublished = {Zenodo},
-  url          = {https://github.com/Qiskit/qiskit},
-  abstract     = {Qiskit is an open-source framework for working with noisy quantum computers at the level of pulses, circuits, and algorithms. https://qiskit.org},
-  note         = {The official way to cite Qiskit is using the bibentry at \url{https://github.com/Qiskit/qiskit/blob/master/Qiskit.bib}},
-  timestamp    = {2021-08-13}
+  title     = {Qiskit: {{An}} Open-Source Framework for Quantum Computing},
+  author    = {{Qiskit Community}},
+  year      = {2017},
+  month     = mar,
+  doi       = {10.5281/zenodo.2562110},
+  url       = {https://github.com/Qiskit/qiskit},
+  abstract  = {Qiskit is an open-source framework for working with noisy quantum computers at the level of pulses, circuits, and algorithms. https://qiskit.org},
+  note      = {The official way to cite Qiskit is using the bibentry at \url{https://github.com/Qiskit/qiskit/blob/master/Qiskit.bib}},
+  timestamp = {2021-08-13}
 }
 
 @techreport{Rand2016,
@@ -896,14 +894,14 @@ quantum algorithms, the Harrow-Hassidim-Lloyd algorithm and Shor's algorithm.}
 }
 
 @misc{Rand2018b,
-  title        = {Phantom {{Types}} for {{Quantum Programs}}},
-  author       = {Rand, Robert and Paykin, Jennifer and Zdancewic, Steve},
-  year         = {2018},
-  month        = jan,
-  howpublished = {The Fourth International Workshop on Coq for Programming Languages (CoqPL '18)},
-  url          = {https://popl18.sigplan.org/event/coqpl-2018-phantom-types-for-quantum-programs},
-  abstract     = {We explore the design space of using dependent types to type check and verify quantum circuits. We weigh the trade-offs between the expressivity of dependent types against the costs imposed by large proof terms. We propose lightweight dependent types, or phantom types, as a middle ground, which provide useful type information for programming while specifying the properties to be externally verified.},
-  timestamp    = {2021-07-16}
+  title     = {Phantom {{Types}} for {{Quantum Programs}}},
+  author    = {Rand, Robert and Paykin, Jennifer and Zdancewic, Steve},
+  year      = {2018},
+  month     = jan,
+  url       = {https://popl18.sigplan.org/event/coqpl-2018-phantom-types-for-quantum-programs},
+  abstract  = {We explore the design space of using dependent types to type check and verify quantum circuits. We weigh the trade-offs between the expressivity of dependent types against the costs imposed by large proof terms. We propose lightweight dependent types, or phantom types, as a middle ground, which provide useful type information for programming while specifying the properties to be externally verified.},
+  note      = {Talk at The Fourth International Workshop on Coq for Programming Languages (CoqPL '18)},
+  timestamp = {2021-07-16}
 }
 
 @inproceedings{Rand2019,
@@ -1080,13 +1078,13 @@ quantum algorithms, the Harrow-Hassidim-Lloyd algorithm and Shor's algorithm.}
 }
 
 @misc{Singhal2020,
-  title        = {Verified translation between low-level quantum languages},
-  author       = {Singhal, Kartik and Rand, Robert and Hicks, Michael},
-  year         = {2020},
-  month        = jan,
-  howpublished = {The First International Workshop on Programming Languages for Quantum Computing (PLanQC '20)},
-  url          = {http://ks.cs.uchicago.edu/publication/verified-translation/},
-  abstract     = {We describe the ongoing development of a verified translator between OpenQASM (Open Quantum Assembly Language) and sqir, a Small Quantum Intermediate Representation used for circuit optimization. Verified translation from and to OpenQASM will allow verified optimization of circuits written in a variety of tools and executed on real quantum computers. This translator is a step toward a verified compilation stack for quantum computing.}
+  title    = {Verified translation between low-level quantum languages},
+  author   = {Singhal, Kartik and Rand, Robert and Hicks, Michael},
+  year     = {2020},
+  month    = jan,
+  url      = {http://ks.cs.uchicago.edu/publication/verified-translation/},
+  abstract = {We describe the ongoing development of a verified translator between OpenQASM (Open Quantum Assembly Language) and sqir, a Small Quantum Intermediate Representation used for circuit optimization. Verified translation from and to OpenQASM will allow verified optimization of circuits written in a variety of tools and executed on real quantum computers. This translator is a step toward a verified compilation stack for quantum computing.},
+  note     = {Talk at The First International Workshop on Programming Languages for Quantum Computing (PLanQC '20)}
 }
 
 @misc{Smith2016,
