Add missing month

--- a/bbt.bib
+++ b/bbt.bib
@@ -1,3 +1,5 @@
+% Encoding: UTF-8
+
 @inproceedings{Abramsky2004,
   title         = {A Categorical Semantics of Quantum Protocols},
   author        = {Abramsky, Samson and Coecke, Bob},
@@ -1210,6 +1212,7 @@ quantum algorithms, the Harrow-Hassidim-Lloyd algorithm and Shor's algorithm.}
   title         = {Hoare Logic for Quantum Programs},
   author        = {Mingsheng Ying},
   year          = {2009},
+  month         = jun,
   archiveprefix = {arXiv},
   eprint        = {0906.4586},
   abstract      = {Hoare logic is a foundation of axiomatic semantics of classical programs and it provides effective proof techniques for reasoning about correctness of classical programs. To offer similar techniques for quantum program verification and to build a logical foundation of programming methodology for quantum computers, we develop a full-fledged Hoare logic for both partial and total correctness of quantum programs. It is proved that this logic is (relatively) complete by exploiting the power of weakest preconditions and weakest liberal preconditions for quantum programs.},
