Delete location field

--- a/bbt.bib
+++ b/bbt.bib
@@ -1310,8 +1310,7 @@ optimising quantum Metropolis sampling.  To our knowledge, this paper is the fir
 attempt to define the notion of invariant and to develop a method of invariant generation
 for quantum programs.},
   numpages  = {15},
-  keywords  = {Inductive assertions, Quantum programming, Partial correctness, Invariant generation, Program invariants},
-  location  = {Paris, France}
+  keywords  = {Inductive assertions, Quantum programming, Partial correctness, Invariant generation, Program invariants}
 }
 
 @misc{Ying2018,
@@ -1341,7 +1340,6 @@ for quantum programs.},
   year      = {2021},
   month     = jun,
   booktitle = {Proceedings of the 42nd ACM SIGPLAN International Conference on Programming Language Design and Implementation},
-  location  = {Virtual, Canada},
   publisher = {Association for Computing Machinery},
   address   = {New York, NY, USA},
   series    = {{{PLDI}} '21},
