--- a/bbt.bib
+++ b/bbt.bib
@@ -350,9 +350,9 @@
   series        = {{{POPL}} '05},
   pages         = {145--157},
   doi           = {10.1145/1040305.1040318},
-  url           = {http://www.dcs.gla.ac.uk/~simon/publications/CQP-POPL.pdf},
   archiveprefix = {arxiv},
   eprint        = {quant-ph/0409052},
+  url           = {http://www.dcs.gla.ac.uk/~simon/publications/CQP-POPL.pdf},
   abstract      = {We define a language CQP (Communicating Quantum Processes) for modelling systems which combine quantum and classical communication and computation. CQP combines the communication primitives of the pi-calculus with primitives for measurement and transformation of quantum state; in particular, quantum bits (qubits) can be transmitted from process to process along communication channels. CQP has a static type system which classifies channels, distinguishes between quantum and classical data, and controls the use of quantum state. We formally define the syntax, operational semantics and type system of CQP, prove that the semantics preserves typing, and prove that typing guarantees that each qubit is owned by a unique process within a system. We illustrate CQP by defining models of several quantum communication systems, and outline our plans for using CQP as the foundation for formal analysis and verification of combined quantum and classical systems.},
   timestamp     = {2021-04-18}
 }
@@ -670,7 +670,7 @@ quantum algorithms, the Harrow-Hassidim-Lloyd algorithm and Shor's algorithm.}
 @misc{Liu2019a,
   title   = {Quantum Hoare Logic},
   author  = {Liu, Junyi and Zhan, Bohua and Wang, Shuling and Ying, Shenggang and Liu, Tao and Li, Yangjia and Ying, Mingsheng and Zhan, Naijun},
-  year    = 2019,
+  year    = {2019},
   month   = mar,
   journal = {Archive of Formal Proofs},
   url     = {https://isa-afp.org/entries/QHLProver.html},
@@ -1291,6 +1291,7 @@ quantum algorithms, the Harrow-Hassidim-Lloyd algorithm and Shor's algorithm.}
   address   = {New York, NY, USA},
   series    = {{POPL} '17},
   pages     = {818--832},
+  numpages  = {15},
   doi       = {10.1145/3009837.3009840},
   url       = {https://opus.lib.uts.edu.au/bitstream/10453/127333/4/p818-ying.pdf},
   abstract  = {Program invariant is a fundamental notion widely used in program verification and
@@ -1309,7 +1310,6 @@ invariants can be used to verify correctness of these algorithms and are helpful
 optimising quantum Metropolis sampling.  To our knowledge, this paper is the first
 attempt to define the notion of invariant and to develop a method of invariant generation
 for quantum programs.},
-  numpages  = {15},
   keywords  = {Inductive assertions, Quantum programming, Partial correctness, Invariant generation, Program invariants}
 }
 
@@ -1381,9 +1381,9 @@ with 300 qubits.}
   year          = {2021},
   month         = jul,
   booktitle     = {Proceedings of the 36th Annual ACM/IEEE Symposium on Logic in Computer Science},
-  series        = {{{LICS}} '21},
   publisher     = {IEEE Computer Society},
   address       = {Los Alamitos, CA, USA},
+  series        = {{{LICS}} '21},
   pages         = {1--14},
   doi           = {10.1109/LICS52264.2021.9470673},
   archiveprefix = {arxiv},
