If on arXiv, then it's misc, not unpublished

--- a/bbt.bib
+++ b/bbt.bib
@@ -486,7 +486,7 @@
   timestamp = {2021-04-18}
 }
 
-@unpublished{Hietala2019,
+@misc{Hietala2019,
   title         = {Verified {{Optimization}} in a {{Quantum Intermediate Representation}}},
   author        = {Hietala, Kesha and Rand, Robert and Hung, Shih-Han and Wu, Xiaodi and Hicks, Michael},
   year          = {2019},
