--- a/bbt.bib
+++ b/bbt.bib
@@ -88,7 +88,7 @@
   booktitle     = {Reversible {{Computation}} ({{RC}} '19)},
   editor        = {Thomsen, Michael Kirkedal and Soeken, Mathias},
   publisher     = {{Springer International Publishing}},
-  series        = {Lecture {{Notes}} in {{Computer Science}}},
+  series        = {Lecture Notes in Computer Science},
   volume        = {11497},
   pages         = {87--107},
   doi           = {10.1007/978-3-030-21500-2_6},
@@ -233,7 +233,7 @@
   editor    = {Aceto, Luca and Damg{\aa}rd, Ivan and Goldberg, Leslie Ann and Halld{\'o}rsson, Magn{\'u}s M. and Ing{\'o}lfsd{\'o}ttir, Anna and Walukiewicz, Igor},
   publisher = {{Springer}},
   address   = {{Berlin, Heidelberg}},
-  series    = {Lecture {{Notes}} in {{Computer Science}}},
+  series    = {Lecture Notes in Computer Science},
   volume    = {5126},
   pages     = {298--310},
   doi       = {10.1007/978-3-540-70583-3_25},
@@ -450,7 +450,7 @@
   booktitle     = {Reversible {{Computation}} ({{RC}} '13)},
   editor        = {Dueck, Gerhard W. and Miller, D. Michael},
   publisher     = {{Springer Berlin Heidelberg}},
-  series        = {Lecture {{Notes}} in {{Computer Science}}},
+  series        = {Lecture Notes in Computer Science},
   volume        = {7948},
   pages         = {110--124},
   doi           = {10.1007/978-3-642-38986-3_10},
@@ -674,7 +674,7 @@ quantum algorithms, the Harrow-Hassidim-Lloyd algorithm and Shor's algorithm.}
   editor    = {Dillig, Isil and Tasiran, Serdar},
   publisher = {{Springer International Publishing}},
   address   = {{Cham}},
-  series    = {Lecture {{Notes}} in {{Computer Science}}},
+  series    = {Lecture Notes in Computer Science},
   volume    = {11562},
   pages     = {187--207},
   doi       = {10.1007/978-3-030-25543-5_12},
@@ -757,7 +757,7 @@ quantum algorithms, the Harrow-Hassidim-Lloyd algorithm and Shor's algorithm.}
   month      = apr,
   booktitle  = {Theory and {{Applications}} of {{Models}} of {{Computation}} ({{TAMC}} '17)},
   publisher  = {{Springer International Publishing}},
-  series     = {Lecture {{Notes}} in {{Computer Science}}},
+  series     = {Lecture Notes in Computer Science},
   volume     = {10185},
   pages      = {455--469},
   doi        = {10.1007/978-3-319-55911-7_33},
@@ -1067,7 +1067,7 @@ quantum algorithms, the Harrow-Hassidim-Lloyd algorithm and Shor's algorithm.}
   editor    = {Kameyama, Yukiyoshi and Stuckey, Peter J.},
   publisher = {{Springer}},
   address   = {{Berlin, Heidelberg}},
-  series    = {Lecture {{Notes}} in {{Computer Science}}},
+  series    = {Lecture Notes in Computer Science},
   pages     = {1--6},
   doi       = {10.1007/978-3-540-24754-8_1},
   abstract  = {This article is a brief and subjective survey of quantum programming language research.},
