--- a/bbt.bib
+++ b/bbt.bib
@@ -1173,6 +1173,23 @@ quantum algorithms, the Harrow-Hassidim-Lloyd algorithm and Shor's algorithm.}
   note          = {See also: \cite{Singhal2020a}}
 }
 
+@article{Sivarajah2020,
+  title         = {t$|$ket$\rangle$: a retargetable compiler for {NISQ} devices},
+  author        = {Sivarajah, Seyon and Dilkes, Silas and Cowtan, Alexander and Simmons, Will and Edgington, Alec and Duncan, Ross},
+  year          = {2020},
+  month         = nov,
+  journal       = {Quantum Science and Technology},
+  publisher     = {{IOP} Publishing},
+  volume        = {6},
+  number        = {1},
+  pages         = {014003},
+  doi           = {10.1088/2058-9565/ab8e92},
+  archiveprefix = {arXiv},
+  eprint        = {2003.10611},
+  url           = {https://github.com/CQCL/pytket},
+  abstract      = {We present t$|$ket$\rangle$, a quantum software development platform produced by Cambridge Quantum Computing Ltd. The heart of t$|$ket$\rangle$ is a language-agnostic optimising compiler designed to generate code for a variety of NISQ devices, which has several features designed to minimise the influence of device error. The compiler has been extensively benchmarked and outperforms most competitors in terms of circuit optimisation and qubit routing.}
+}
+
 @misc{Smith2016,
   title         = {A {{Practical Quantum Instruction Set Architecture}}},
   author        = {Smith, Robert S. and Curtis, Michael J. and Zeng, William J.},
