Use most precise name for avoiding duplication

--- a/bbt.bib
+++ b/bbt.bib
@@ -477,7 +477,7 @@
 
 @article{Heim2020a,
   title     = {Quantum Programming Languages},
-  author    = {Heim, Bettina and Soeken, Mathias and Marshall, Sarah and Granade, Chris and Roetteler, Martin and Geller, Alan and Troyer, Matthias and Svore, Krysta M.},
+  author    = {Heim, Bettina and Soeken, Mathias and Marshall, Sarah and Granade, Christopher E. and Roetteler, Martin and Geller, Alan and Troyer, Matthias and Svore, Krysta M.},
   year      = {2020},
   month     = dec,
   journal   = {Nature Reviews Physics},
@@ -1244,7 +1244,7 @@ of computation by investigating variations on the algebraic theory.},
 @inproceedings{Svore2018,
   title         = {Q\#: {{Enabling Scalable Quantum Computing}} and {{Development}} with a {{High}}-Level {{DSL}}},
   shorttitle    = {Q\#},
-  author        = {Svore, Krysta M. and Geller, Alan and Troyer, Matthias and Azariah, John and Granade, Christopher and Heim, Bettina and Kliuchnikov, Vadym and Mykhailova, Mariia and Paz, Andres and Roetteler, Martin},
+  author        = {Svore, Krysta M. and Geller, Alan and Troyer, Matthias and Azariah, John and Granade, Christopher E. and Heim, Bettina and Kliuchnikov, Vadym and Mykhailova, Mariia and Paz, Andres and Roetteler, Martin},
   year          = {2018},
   month         = feb,
   booktitle     = {Proceedings of the {{Real World Domain Specific Languages Workshop}} 2018},
