--- a/bbt.bib
+++ b/bbt.bib
@@ -281,7 +281,7 @@
 
 @misc{Chareton2021a,
   title         = {Formal Methods for Quantum Programs: A Survey},
-  author        = {Chareton, Christophe and Bardin, S{\'e}bastien and Lee, Dong-Ho and Valiron, Beno{\^i}t and Vilmart, Renaud and Xu, Zhaowei},
+  author        = {Chareton, Christophe and Bardin, S{\'e}bastien and Lee, Dongho and Valiron, Beno{\^i}t and Vilmart, Renaud and Xu, Zhaowei},
   year          = {2021},
   month         = sep,
   archiveprefix = {arXiv},
@@ -1012,7 +1012,7 @@ quantum algorithms, the Harrow-Hassidim-Lloyd algorithm and Shor's algorithm.}
 @inproceedings{Rand2019,
   title      = {{{ReQWIRE}}: {{Reasoning}} about {{Reversible Quantum Circuits}}},
   shorttitle = {{{ReQWIRE}}},
-  author     = {Rand, Robert and Paykin, Jennifer and Lee, Dong-Ho and Zdancewic, Steve},
+  author     = {Rand, Robert and Paykin, Jennifer and Lee, Dongho and Zdancewic, Steve},
   year       = {2019},
   month      = jan,
   booktitle  = {Proceedings of the 15th International Conference on Quantum Physics and Logic (QPL), Halifax, Canada, June 3--7, 2018},
