Add picturing quantum processes book

--- a/bbt.bib
+++ b/bbt.bib
@@ -316,6 +316,17 @@
   timestamp  = {2021-04-18}
 }
 
+@book{Coecke2017,
+  title     = {Picturing Quantum Processes: A First Course in Quantum Theory and Diagrammatic Reasoning},
+  author    = {Coecke, Bob and Kissinger, Aleks},
+  year      = {2017},
+  month     = mar,
+  publisher = {Cambridge University Press},
+  address   = {Cambridge},
+  doi       = {10.1017/9781316219317},
+  abstract  = {The unique features of the quantum world are explained in this book through the language of diagrams, setting out an innovative visual method for presenting complex theories. Requiring only basic mathematical literacy, this book employs a unique formalism that builds an intuitive understanding of quantum features while eliminating the need for complex calculations. This entirely diagrammatic presentation of quantum theory represents the culmination of ten years of research, uniting classical techniques in linear algebra and Hilbert spaces with cutting-edge developments in quantum computation and foundations. Written in an entertaining and user-friendly style and including more than one hundred exercises, this book is an ideal first course in quantum theory, foundations, and computation for students from undergraduate to PhD level, as well as an opportunity for researchers from a broad range of fields, from physics to biology, linguistics, and cognitive science, to discover a new set of tools for studying processes and interaction.}
+}
+
 @misc{Cross2017,
   title         = {Open {{Quantum Assembly Language}}},
   author        = {Cross, Andrew W. and Bishop, Lev S. and Smolin, John A. and Gambetta, Jay M.},
@@ -1010,20 +1021,20 @@ quantum algorithms, the Harrow-Hassidim-Lloyd algorithm and Shor's algorithm.}
 }
 
 @inproceedings{Rand2020,
-  title         = {Gottesman Types for Quantum Programs},
-  author        = {Rand, Robert and Sundaram, Aarthi and Singhal, Kartik and Lackey, Brad},
-  year          = {2020},
-  month         = jun,
-  booktitle     = {Proceedings of the 17th International Conference on Quantum Physics and Logic (QPL), Paris, France, June 2--6, 2020},
-  editor        = {Valiron, Beno{\^i}t and Mansfield, Shane and Arrighi, Pablo and Panangaden, Prakash},
-  publisher     = {{Open Publishing Association}},
-  series        = {Electronic Proceedings in Theoretical Computer Science},
-  volume        = {340},
-  pages         = {279--290},
-  doi           = {10.4204/EPTCS.340.14},
-  url           = {https://rand.cs.uchicago.edu/publication/rand-2020-gottesman/},
-  abstract      = {The Heisenberg representation of quantum operators provides a powerful technique for reasoning about quantum circuits, albeit those restricted to the common (non-universal) Clifford set H, S and CNOT. The Gottesman-Knill theorem showed that we can use this representation to efficiently simulate Clifford circuits. We show that Gottesman's semantics for quantum programs can be treated as a type system, allowing us to efficiently characterize a common subset of quantum programs. We also show that it can be extended beyond the Clifford set to partially characterize a broad range of programs. We apply these types to reason about separable states and the superdense coding algorithm.},
-  keywords      = {Quantum Computing, Type Systems, Gottesman Types}
+  title     = {Gottesman Types for Quantum Programs},
+  author    = {Rand, Robert and Sundaram, Aarthi and Singhal, Kartik and Lackey, Brad},
+  year      = {2020},
+  month     = jun,
+  booktitle = {Proceedings of the 17th International Conference on Quantum Physics and Logic (QPL), Paris, France, June 2--6, 2020},
+  editor    = {Valiron, Beno{\^i}t and Mansfield, Shane and Arrighi, Pablo and Panangaden, Prakash},
+  publisher = {{Open Publishing Association}},
+  series    = {Electronic Proceedings in Theoretical Computer Science},
+  volume    = {340},
+  pages     = {279--290},
+  doi       = {10.4204/EPTCS.340.14},
+  url       = {https://rand.cs.uchicago.edu/publication/rand-2020-gottesman/},
+  abstract  = {The Heisenberg representation of quantum operators provides a powerful technique for reasoning about quantum circuits, albeit those restricted to the common (non-universal) Clifford set H, S and CNOT. The Gottesman-Knill theorem showed that we can use this representation to efficiently simulate Clifford circuits. We show that Gottesman's semantics for quantum programs can be treated as a type system, allowing us to efficiently characterize a common subset of quantum programs. We also show that it can be extended beyond the Clifford set to partially characterize a broad range of programs. We apply these types to reason about separable states and the superdense coding algorithm.},
+  keywords  = {Quantum Computing, Type Systems, Gottesman Types}
 }
 
 @inproceedings{Rennela2018,
@@ -1194,21 +1205,21 @@ quantum algorithms, the Harrow-Hassidim-Lloyd algorithm and Shor's algorithm.}
 }
 
 @inproceedings{Singhal2020a,
-  title         = {Quantum Hoare Type Theory: Extended Abstract},
-  author        = {Singhal, Kartik and Reppy, John},
-  year          = {2020},
-  month         = jun,
-  booktitle     = {Proceedings of the 17th International Conference on Quantum Physics and Logic (QPL), Paris, France, June 2--6, 2020},
-  editor        = {Valiron, Beno{\^i}t and Mansfield, Shane and Arrighi, Pablo and Panangaden, Prakash},
-  publisher     = {{Open Publishing Association}},
-  series        = {Electronic Proceedings in Theoretical Computer Science},
-  volume        = {340},
-  pages         = {291--302},
-  doi           = {10.4204/EPTCS.340.15},
-  url           = {https://ks.cs.uchicago.edu/publication/qhtt/},
-  abstract      = {As quantum computers become real, it is high time we come up with effective techniques that help programmers write correct quantum programs. In classical computing, formal verification and sound static type systems prevent several classes of bugs from being introduced. There is a need for similar techniques in the quantum regime. Inspired by Hoare Type Theory in the classical paradigm, we propose Quantum Hoare Types by extending the Quantum IO Monad by indexing it with pre- and post-conditions that serve as program specifications. In this paper, we introduce Quantum Hoare Type Theory (QHTT), present its syntax and typing rules, and demonstrate its effectiveness with the help of examples. QHTT has the potential to be a unified system for programming, specifying, and reasoning about quantum programs. This is a work in progress.},
-  keywords      = {Formal Verification, Program Proof, Programming Languages, Quantum Computing, Type Systems, Type Theory, Pre- and Postconditions, Program Specifications},
-  note          = {Also see expanded version: \cite{Singhal2020b}}
+  title     = {Quantum Hoare Type Theory: Extended Abstract},
+  author    = {Singhal, Kartik and Reppy, John},
+  year      = {2020},
+  month     = jun,
+  booktitle = {Proceedings of the 17th International Conference on Quantum Physics and Logic (QPL), Paris, France, June 2--6, 2020},
+  editor    = {Valiron, Beno{\^i}t and Mansfield, Shane and Arrighi, Pablo and Panangaden, Prakash},
+  publisher = {{Open Publishing Association}},
+  series    = {Electronic Proceedings in Theoretical Computer Science},
+  volume    = {340},
+  pages     = {291--302},
+  doi       = {10.4204/EPTCS.340.15},
+  url       = {https://ks.cs.uchicago.edu/publication/qhtt/},
+  abstract  = {As quantum computers become real, it is high time we come up with effective techniques that help programmers write correct quantum programs. In classical computing, formal verification and sound static type systems prevent several classes of bugs from being introduced. There is a need for similar techniques in the quantum regime. Inspired by Hoare Type Theory in the classical paradigm, we propose Quantum Hoare Types by extending the Quantum IO Monad by indexing it with pre- and post-conditions that serve as program specifications. In this paper, we introduce Quantum Hoare Type Theory (QHTT), present its syntax and typing rules, and demonstrate its effectiveness with the help of examples. QHTT has the potential to be a unified system for programming, specifying, and reasoning about quantum programs. This is a work in progress.},
+  keywords  = {Formal Verification, Program Proof, Programming Languages, Quantum Computing, Type Systems, Type Theory, Pre- and Postconditions, Program Specifications},
+  note      = {Also see expanded version: \cite{Singhal2020b}}
 }
 
 @mastersthesis{Singhal2020b,
