--- a/bbt.bib
+++ b/bbt.bib
@@ -613,6 +613,22 @@
   keywords  = {Formal Verification, Quantum Computing, Proof Engineering}
 }
 
+@inproceedings{Huang2019,
+  title =	{{QDB: From Quantum Algorithms Towards Correct Quantum Programs}},
+  author =	{Huang, Yipeng and Martonosi, Margaret},
+  year =	{2019},
+  month = jan,
+  booktitle =	{9th Workshop on Evaluation and Usability of Programming  Languages and Tools (PLATEAU 2018)},
+  editor =	{Titus Barik and Joshua Sunshine and Sarah Chasins},
+  publisher =	{Schloss Dagstuhl--Leibniz-Zentrum fuer Informatik},
+  address =	{Dagstuhl, Germany},
+  series =	{OpenAccess Series in Informatics (OASIcs)},
+  volume =	{67},
+  pages =	{4:1--4:14},
+  doi =		{10.4230/OASIcs.PLATEAU.2018.4},
+  keywords =	{correctness, debugging}
+}
+
 @techreport{JavadiAbhari2012,
   title       = {Scaffold: {{Quantum}} Programming Language},
   author      = {{Javadi-Abhari}, Ali and Faruque, Arvin and Dousti, Mohammad Javad and Svec, Lukas and Catu, Oana and Chakrabati, Amlan and Chiang, Chen-Fu and Vanderwilt, Seth and Black, John and Chong, Frederic T. and Martonosi, Margaret and Suchara, Martin and Brown, Ken and Pedram, Massoud and Brun, Todd},
