Canonical last, first name ordering in author field

--- a/bbt.bib
+++ b/bbt.bib
@@ -117,7 +117,7 @@
 
 @article{Backens2014,
   title     = {The {ZX}-calculus is complete for stabilizer quantum mechanics},
-  author    = {Miriam Backens},
+  author    = {Backens, Miriam},
   year      = {2014},
   month     = sep,
   journal   = {New Journal of Physics},
@@ -318,7 +318,7 @@
   number     = {4},
   pages      = {043016},
   doi        = {10.1088/1367-2630/13/4/043016},
-  abstract   = {This paper has two tightly intertwined aims: (i) to introduce an intuitive and universal graphical calculus for multi-qubit systems, the ZX-calculus, which greatly simplifies derivations in the area of quantum computation and information. (ii) To axiomatize complementarity of quantum observables within a general framework for physical theories in terms of dagger symmetric monoidal categories. We also axiomatize phase shifts within this framework. Using the well-studied canonical correspondence between graphical calculi and dagger symmetric monoidal categories, our results provide a purely graphical formalisation of complementarity for quantum observables. Each individual observable, represented by a commutative special dagger Frobenius algebra, gives rise to an Abelian group of phase shifts, which we call the phase group. We also identify a strong form of complementarity, satisfied by the Z- and X-spin observables, which yields a scaled variant of a bialgebra.}
+  abstract   = {This paper has two tightly intertwined aims: (i) to introduce an intuitive and universal graphical calculus for multi-qubit systems, the ZX-calculus, which greatly simplifies derivations in the area of quantum computation and information. (ii) To axiomatize complementarity of quantum observables within a general framework for physical theories in terms of dagger symmetric monoidal categories. We also axiomatize phase shifts within this framework. Using the well-studied canonical correspondence between graphical calculi and dagger symmetric monoidal categories, our results provide a purely graphical formalisation of complementarity for quantum observables. Each individual observable, represented by a commutative special dagger Frobenius algebra, gives rise to an Abelian group of phase shifts, which we call the phase group. We also identify a strong form of complementarity, satisfied by the Z- and X-spin observables, which yields a scaled variant of a bialgebra.},
   note       = {Corrects several errors in and supersedes the earlier ICALP 2008 conference paper.}
 }
 
@@ -473,7 +473,7 @@
 
 @article{Gay2006,
   title    = {Quantum Programming Languages: Survey and Bibliography},
-  author   = {Simon J. Gay},
+  author   = {Gay, Simon J.},
   year     = {2006},
   month    = aug,
   journal  = {Mathematical Structures in Computer Science},
@@ -516,7 +516,7 @@
 
 @inproceedings{Grattage2011,
   title         = {An Overview of QML With a Concrete Implementation in Haskell},
-  author        = {Jonathan Grattage},
+  author        = {Grattage, Jonathan},
   year          = {2011},
   month         = feb,
   booktitle     = {Proceedings of the Joint 5th International Workshop on Quantum Physics and Logic and 4th Workshop on Developments in Computational Models (QPL/DCM 2008)},
@@ -906,7 +906,7 @@
 
 @misc{Mosca2019,
   title     = {{Quantum Programming Languages (Dagstuhl Seminar 18381)}},
-  author    = {Mosca,  Michele and Roetteler,  Martin and Selinger,  Peter},
+  author    = {Mosca, Michele and Roetteler, Martin and Selinger, Peter},
   year      = {2019},
   month     = mar,
   journal   = {Dagstuhl Reports},
@@ -1210,7 +1210,7 @@
 
 @phdthesis{Rios2021,
   title    = {On a Categorically Sound Quantum Programming Language for Circuit Description},
-  author   = {Francisco Rios},
+  author   = {Rios, Francisco},
   year     = {2021},
   month    = aug,
   school   = {Dalhousie University},
@@ -1359,7 +1359,7 @@
 
 @mastersthesis{Singhal2020b,
   title         = {Quantum Hoare Type Theory},
-  author        = {Kartik Singhal},
+  author        = {Singhal, Kartik},
   year          = {2020},
   month         = dec,
   school        = {University of Chicago},
@@ -1572,7 +1572,7 @@
 
 @misc{Ying2009a,
   title         = {Hoare Logic for Quantum Programs},
-  author        = {Mingsheng Ying},
+  author        = {Ying, Mingsheng},
   year          = {2009},
   month         = jun,
   archiveprefix = {arXiv},
@@ -1625,7 +1625,7 @@
 
 @misc{Ying2014a,
   title         = {Quantum Recursion and Second Quantisation},
-  author        = {Mingsheng Ying},
+  author        = {Ying, Mingsheng},
   year          = {2014},
   month         = may,
   archiveprefix = {arXiv},
